--- a/templates/massage/index.html.twig
+++ b/templates/massage/index.html.twig
@@ -36,7 +36,11 @@
 								<p class="pb-4"><span class="text-muted">60 min</span> <span class="details">{{massage.price}} €</span></p>
 								<a class="btn-design btn-massage text-center mb-5" href="{{ path('app_reservation', { id: massage.id }) }}">
 									réserver
-								</a>					 
+								</a>	
+
+								<a class="btn-design btn-massage text-center mb-5" href="{{ path('app_gift', { id: massage.id }) }}">
+									bon cadeau
+								</a>				 
 							</div>
 											
 					</div>
