--- a/templates/component/_intro.html.twig
+++ b/templates/component/_intro.html.twig
@@ -1,8 +1,8 @@
 
 <div class="intro reveal">
     <div class="intro-text">
-        <h1 >Find Yourself Here</h1>
-         {# <h1>Se Retrouver Ici  |  retrouvez-vous ici</h1> #}
+        <h1 >Se Retrouver Ici</h1>
+         {# <h1>Find Yourself Here  |  retrouvez-vous ici</h1> #}
         <a href="{{ path('app_home') }}" class="btn-design">réserver</a>
     </div>
     <div class="intro-window">
