--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,5 +15,6 @@
         'App\\Controller\\MassagistController::index'
     )) }}
 
+    {{ include('component/_contact.html.twig')}}
     {{ include('component/_footer.html.twig') }}
 {% endblock %}
