--- a/templates/payment/success.html.twig
+++ b/templates/payment/success.html.twig
@@ -2,21 +2,20 @@
 
 {% block title %}Payment Success!{% endblock %}
 
-{% block stylesheets %}
-    {{parent()}}
-    <link rel="stylesheet" href="/css/style.css">
-{% endblock %}
+
 
 {% block body %}
     {{parent()}}
 
-<h1>Thanks for your order!</h1>
-    <p>
-      We appreciate your business!
-      If you have any questions, please email
-      <a href="mailto:orders@example.com">orders@example.com</a>.
-    </p>
 
-  <a class="btn-design" href="{{ path('app_home') }}">retour à accueil</a>
+<div class="text-center success">
+    <h1>Merci pour votre commande!</h1>
+      <p>
+        En cas de questions, veuillez nous contacter par e-mail:
+        <a href="mailto:wf3-massage@relax.fr">wf3-massage@relax.fr</a>.
+      </p>
+
+    <a class="btn-design" href="{{ path('app_home') }}">retour à accueil</a>
+  </div>
 
 {% endblock %}
