--- a/templates/component/aboutUs.html.twig
+++ b/templates/component/aboutUs.html.twig
@@ -1,7 +1,7 @@
 <section class="about reveal">
 	<div class="container">
-			<h2 class="section-title">Why Choose Us</h2>
-			<p>Welcome to one of most relaxing salons, where our trained therapists offer you peace and tranquility. Come in and relax to soothing music as our therapists provide the perfect treatment. Our massage is specially designed to help people achieve the perfect mind-body harmony. Let Grand Central Bodywork be your oasis from the urban metropolis of Paris.</p>
+			<h2 class="section-title">Bienvenue au SalonM  </h2>
+			<p>SalonM dédié au bien-être et à la culture du monde, ce lieu se compose de deux espaces de massages et d’un espace de détente « salon de thé » où vous pourrez prendre votre temps. Véritable havre de paix dédié à votre détente en plein coeur de Mâcon, Massages et Soins du Monde est un lieu de beauté et de confort d’une élégance simple et reposante, le tout dans une ambiance « SPA » zen et chaleureuse.</p>
 	</div>
 </section>
 
