--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,12 +18,12 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {% if app.user %}
+    {# {% if app.user %}
         <div class="mb-3">
             {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}"></a>
         </div>
-    {% endif %}
-             
+    {% endif %}  #}
+              
                 <h1>Connexion Administration</h1>
             
                     <label for="email">Email adresse </label>
