checkout payment with reservation or gift id value

--- a/templates/payment/success.html.twig
+++ b/templates/payment/success.html.twig
@@ -18,4 +18,9 @@
     <a class="btn-design" href="{{ path('app_home') }}">retour à accueil</a>
   </div>
 
+
+<pre>
+    {{ dump(idGift) }}
+</pre>
+
 {% endblock %}
