--- a/templates/component/_aboutUs.html.twig
+++ b/templates/component/_aboutUs.html.twig
@@ -1,4 +1,4 @@
-<section class="about reveal">
+<section class="about reveal" id="about">
 	<div class="container">
 			<h2 class="section-title">Bienvenue au SalonM  </h2>
 			<p>SalonM dédié au bien-être et à la culture du monde, ce lieu se compose de deux espaces de massages et d’un espace de détente « salon de thé » où vous pourrez prendre votre temps. Véritable havre de paix dédié à votre détente en plein coeur de Mâcon, Massages et Soins du Monde est un lieu de beauté et de confort d’une élégance simple et reposante, le tout dans une ambiance « SPA » zen et chaleureuse.</p>
