--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer py-3">
+<footer class="footer py-3" id="footer">
 	<div class="container">
 		<div class="container">
 			<div class="row mx-auto py-4 d-flex align-items-top justify-content-space-between ">
