--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -1,20 +1,22 @@
 
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="{{ path('app_home') }}">logo</a>
+    <a class="navbar-brand" href="{{ path('app_home') }}">
+    <img class="logo" src="{{ asset('/images/logo_small.png') }}" alt="logo img">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse navigation" id="navbarNav">
       <ul class="navbar-nav ">
+      <li class="nav-item">
+          <a class="nav-link" href="{{ path('app_home') }}#about">A propos</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{{ path('app_home') }}#massage">Soins</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_home') }}#massage">Réserver</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ path('app_home') }}#contact">Contact</a>
+          <a class="nav-link" href="{{ path('app_home') }}#footer">Contact</a>
         </li>
       </ul>
     </div>
@@ -22,6 +24,5 @@
 </nav>
 
 
-{# <a href="{{ path('_welcome') }}#home">Home</a> #}
 
 
