--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {{ include('component/_navbar.html.twig') }}
     {{ include('component/_intro.html.twig') }}
-    {{ include('component/aboutUs.html.twig')}}
+    {{ include('component/_aboutUs.html.twig')}}
 
     {{ render(controller(
         'App\\Controller\\MassageController::index'
