--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -26,10 +26,10 @@
               
                 <h1>Connexion Administration</h1>
             
-                    <label for="email">Email adresse </label>
+                    <label for="email"> Email adresse </label>
                     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
             
-                    <label for="password">Mot de passe</label>
+                    <label for="password"> Mot de passe </label>
                     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
             
 
@@ -43,7 +43,7 @@
             
         </section>    
 
-        <section class="presentation">
+        <section class="image">
         </section>
     
 
